--- a/src/main/resources/views/error.html
+++ b/src/main/resources/views/error.html
@@ -7,11 +7,11 @@
 <div th:replace="../templates/main-layout::header"></div>
 
 <div role="main" class="container">
-    <h3>Spring Boot - Index</h3>
-    <div class="alert alert-success">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Aliquid consectetur corporis hic id iste magni minus modi nobis numquam officia placeat possimus quidem,
-        quos repellat ullam? Aut modi quas quisquam!
+    <h3>Spring Boot - Error!</h3>
+    <div class="alert alert-warning">
+        ...
+
+        <a href="./">back</a>
     </div>
 </div>
 
