--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,14 +6,14 @@
 </head>
 <body>
     <div th:fragment="footer" class="footer bg-dark fixed-bottom">
-        <span class="text-muted">&copy; MC 2021.</span>
+        <span class="text-muted">&copy; MC 2017-2021.</span>
         <a th:href="@{https://spring.io/guides/gs/securing-web/}">Securing a Web Application</a> |
         <a th:href="@{https://spring.io/guides/tutorials/spring-boot-oauth2/}">Spring Boot and OAuth2</a> |
         <a th:href="@{https://spring.io/guides/gs/rest-service/}">Building a RESTful Web Service</a> |
         <a th:href="@{https://spring.io/guides/tutorials/bookmarks/}">Building REST services with Spring</a>
     </div>
     <div th:fragment="footer-admin">
-        &copy; 2021 Admin Footer
+        &copy; 2017-2021 Admin Footer
     </div>
 </body>
 </html>
