--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
+    /*position: absolute;*/
+    /*bottom: 0;*/
     width: 100%;
     height: 60px;
     line-height: 60px;
@@ -584,3 +584,5 @@ img {
     margin: 10px auto;
     max-width: 800px;
 }
+
+
