JUnit5 + Mockito tests

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,6 +16,7 @@
         <li>Spring boot - JPA (MySQL)</li>
         <li>Spring boot - Thymeleaf (Templates Engine)</li>
         <li>Spring boot - REST-assured (REST APIs : Testing + Validation)</li>
+        <li>Spring boot - JUnit5 - Mockito Tests</li>
     </ul>
 </div>
 <div th:fragment="contact">
